<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello"></string>
	<string name="app_name">Vogueable</string>

	
	<string name="like_label">Like</string>
	<string name="dislike_label">Dislike</string>
	
	<string name="men_label">MEN</string>
	<string name="women_label">WOMEN</string>
	
	<string name="shoe_label">Shoes</string>
	<string name="accesories_label">Accessories</string>
	<string name="romper_label">Jumpsuits and Rompers</string>
	<string name="dress_label">Dresses</string>
	<string name="active_label">Activewear</string>
	<string name="hoodie_label">Hoodies</string>
	<string name="jacket_label">Jackets, Blazers and Vests</string>
	<string name="blouse_label">Blouses and Button-Down Shirts</string>
	<string name="top_label">Tops and Tees</string>
	<string name="intimate_label">Intimates</string>
	<string name="bottom_label">Bottoms</string>
	<string name="suit_label">Suits and Separates</string>
	
	<string name="select_all_label">Select All</string>
	<string name="deselect_all_label">Deselect All</string>
	
	
	<string name="category_label">Choose Departments</string>
	<string name="browse_label">Start Browsing</string>
	
	<string name="about_title">About this Vogueable app</string>
    <string name="about_text">Vogueable is designed to ease the way you get the latest fashion trends in the market</string>
    
    <string name="settings_label">Options</string>
   	<string name="settings_title">Change Settings</string>
   	<string name="settings_shortcut">s</string>
   	
    <string name="buy_buy">Buy!</string>
    <string name="remove">Remove</string>
  	<string name="wishlist_label">Add to wishlist!</string>
  	<string name="view_wishlist">View Wishlist</string>
  	<string name="wishlist">Wishlist</string>
  	<string name="return_cat_label">Change Departments</string>
  	

   	<string name="login_label">Login</string>   	
   	<string name="go_label">Go</string>

   	<string name="wish_label">W</string> 
   	<string name="buy_label">B</string> 
   	<string name="info_name">Nice Shirt</string>
   	<string name="getit_label">Get it!</string>
    <string name="item_info"></string>
   	
   	<string name="curr_name">Current Name</string>
   	<string name="curr_price">Current Price</string>
   	<string name="curr_link">Current Link</string>
   	
   <string name="temporal">This is temporal</string> 
   <string name="hello_user">Hello Username</string> 
	
</resources>
