<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  
  <TextView
		android:id="@+id/info_content"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/temporal"
	    android:gravity="center_horizontal"
	    />
  
  	<ImageView   
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:src="@drawable/logobright"/>
  	
  	<TextView
		android:id="@+id/info_content"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/hello_user"
	    android:gravity="center_horizontal"
	    />
  
	<Button android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
		android:layout_marginTop="80dip"
    	android:text="@string/go_label" 
    	android:textSize="20dip"
    	android:id="@+id/go_button"
    	android:textColor="#FFCC00"
    	android:layout_gravity="center_horizontal"></Button>
</LinearLayout>

