<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dip" android:orientation="vertical">
    >
	<TextView
		android:id="@+id/content"
		android:textSize="25dip"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" 
	    android:text="@string/curr_name"
	    android:gravity="center_horizontal"
	    android:layout_marginBottom="5dip"
	    />
	 <TextView
		android:id="@+id/content"
		android:textSize="20dip"
	    android:layout_height="fill_parent"
	    android:layout_width="fill_parent"
	    android:text="@string/curr_price"
	    android:gravity="center_horizontal"
	    android:layout_marginBottom="30dip"
	    />
	    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dip"
  	android:orientation="horizontal">
    >
    <Button android:id="@+id/wishlist_button" 
	 	android:textColor="@color/yellow"
	 	android:textSize="20dip"
	 	android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/wishlist_label"
		android:gravity="center_horizontal"
		android:padding="5dip"
		android:layout_alignParentTop="true" 
		android:background="@drawable/custom_button"
		android:layout_margin="5dip">
	</Button>
	 <Button android:id="@+id/getit_button" 
	 	android:textColor="@color/yellow"
	 	android:textSize="20dip"
	 	android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/getit_label"
		android:gravity="center_horizontal"
		android:padding="5dip"
		android:layout_alignParentTop="true"
		android:background="@drawable/custom_button"
		android:layout_margin="5dip">	</Button>
	</LinearLayout>
	 
</LinearLayout>
